# docspec

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.en.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/dev/: template-pack-notes.md
docs/showcase/: PROMPTS.md  README.md
docs/showcase/deliverables/: academic-en.md  academic-zh.md  essay-en.md  essay-zh.md  novel-en.md  novel-zh.md
src/dspx/: __init__.py  __main__.py  _install_source.py  aperture.py  audit.py  change.py  check.py  cli.py  config.py  crossref.py  forest.py  format_config.py  freeze.py  frontmatter.py  glossary.py  layout.py  lint.py  model.py  paths.py  render.py  roadmap.py  schema.py  skills.py  slots.py  spans.py  store.py  welcome.py
src/dspx/check/: __init__.py  _audit.py  _authored.py  _changes.py  _cross_section.py  _cycles.py  _fieldmap.py  _groups.py  _hierarchy.py  _hygiene.py  _ids_and_refs.py  _images.py  _prose_anchors.py  _roadmap.py  _types.py
src/dspx/commands/: __init__.py  _shared.py  audit.py  change.py  change_archive.py  check.py  diff.py  doctor.py  export.py  freeze_cmd.py  get.py  guide.py  hook.py  impact.py  init.py  instructions.py  lint.py  list_cmd.py  measure_fonts.py  mv.py  new.py  proof.py  publish.py  put.py  ready.py  redraft.py  reference.py  rename_term.py  render.py  retire.py  retire_section.py  retired.py  roadmap.py  self_update.py  setup.py  show.py  skills_cmd.py  stale.py  status.py  store.py  (+3 more)
src/dspx/engine/: aperture.py  change.py  crossref.py  forest.py  (+9 more)
tests/: conftest.py  test_aperture.py  test_article_store.py  test_audit.py  test_change_event_layer.py  test_check.py  test_commands.py  test_config.py  test_contract_slimming_gate.py  test_crossdoc_impact.py  test_discoverability.py  test_distribution_dx.py  test_dogfood_fixes.py  test_dossier_layout.py  test_edit.py  test_engine_write.py  test_export.py  test_export_dx.py  test_fail_loud_batch.py  test_find.py  test_fingerprint_v2.py  test_forest.py  test_format_config.py  test_freeze.py  test_frontmatter.py  test_glossary.py  test_governance_store.py  test_init.py  test_layout.py  test_lint_cleanliness.py  test_lint_more.py  test_loader_fail_loud.py  test_migration_onboarding.py  test_mv.py  test_normalize.py  test_phase_f.py  test_proof.py  test_prose_crossref_anchors.py  test_put_change_aware.py  test_record_integrity.py  (+19 more)
tools/: gen_pack_hashes.py
(+126 files in other folders)
